<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/demot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Hello" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="download" />


    <EditText
        android:id="@+id/et_updatevalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter a value to update bill amount" />

    <Button
        android:id="@+id/button_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pay" />

    <Button
        android:id="@+id/button_deleteall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete All" />


</LinearLayout>